<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ffmpeg_to_foxglove</name>
  <version>0.1.0</version>
  <description>Tool to convert rosbag with ffmpeg camera topic to foxglove compressed video topic.
  </description>
  <maintainer email="Jan.Vojnar@cvut.cz">Jan Vojnar</maintainer>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rosbag2_py</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
