<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ffmpeg_to_foxglove_video</name>
  <version>0.1.0</version>
  <description>
    Tool to convert ROS bags containing video encoded via
    ffmpeg_image_transport to ROS bags with Foxglove CompressedVideo
    messages.
  </description>
  <maintainer email="Jan.Vojnar@cvut.cz">Jan Vojnar</maintainer>
  <license>Proprietary</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>ffmpeg_image_transport_msgs</exec_depend>
  <exec_depend>foxglove_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
